k8s/platform/observability/overlays/prod-eu/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: otel
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
